syntax = "proto3";

package aurora.metrics.v1;

option go_package = "aurora-kvm-agent/proto/metricsv1";

message NodeMetrics {
  string node_id = 1;
  string hostname = 2;
  int64 timestamp_unix = 3;
  double cpu_usage_pct = 4;
  uint64 cpu_cores = 5;
  uint64 cpu_mhz = 6;
  double load_1 = 7;
  double load_5 = 8;
  double load_15 = 9;
  uint64 ram_used_bytes = 10;
  uint64 ram_total_bytes = 11;
  uint64 disk_read_bytes = 12;
  uint64 disk_write_bytes = 13;
  uint64 net_rx_bytes = 14;
  uint64 net_tx_bytes = 15;
}

message VMMetrics {
  string node_id = 1;
  string vm_id = 2;
  string vm_name = 3;
  string state = 4;
  int64 timestamp_unix = 5;
  double cpu_usage_pct = 6;
  uint64 vcpu_count = 7;
  uint64 ram_used_bytes = 8;
  uint64 ram_total_bytes = 9;
  uint64 disk_read_bytes = 10;
  uint64 disk_write_bytes = 11;
  uint64 net_rx_bytes = 12;
  uint64 net_tx_bytes = 13;
}

message NodeMetricsFrame {
  string node_id = 1;
  int64 timestamp_unix = 2;
  NodeMetrics metrics = 3;
}

message VMMetricsFrame {
  string node_id = 1;
  int64 timestamp_unix = 2;
  repeated VMMetrics metrics = 3;
}

message StreamAck {
  string node_id = 1;
  int64 accepted_at_unix = 2;
  string message = 3;
}

service MetricsService {
  rpc StreamNodeMetrics(stream NodeMetricsFrame) returns (StreamAck);
  rpc StreamVMMetrics(stream VMMetricsFrame) returns (StreamAck);
}
